; ModuleID = '/home/carl/AnghaBench/reactos/drivers/network/ndisuio/extr_misc.c_CreatePacketFromPoolBuffer.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/network/ndisuio/extr_misc.c_CreatePacketFromPoolBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@NDIS_STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"No free packet descriptors\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CreatePacketFromPoolBuffer(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @NdisAllocatePacket(i64* %9, i32** %8, i32 %12)
  %14 = load i64, i64* %9, align 8
  %15 = load i64, i64* @NDIS_STATUS_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = call i32 @DPRINT1(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32* null, i32** %4, align 8
  br label %34

19:                                               ; preds = %3
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* @TRUE, align 4
  %25 = call i64 @AllocateAndChainBuffer(%struct.TYPE_4__* %20, i32* %21, i32 %22, i32 %23, i32 %24)
  store i64 %25, i64* %9, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* @NDIS_STATUS_SUCCESS, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %19
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @NdisFreePacket(i32* %30)
  store i32* null, i32** %4, align 8
  br label %34

32:                                               ; preds = %19
  %33 = load i32*, i32** %8, align 8
  store i32* %33, i32** %4, align 8
  br label %34

34:                                               ; preds = %32, %29, %17
  %35 = load i32*, i32** %4, align 8
  ret i32* %35
}

declare dso_local i32 @NdisAllocatePacket(i64*, i32**, i32) #1

declare dso_local i32 @DPRINT1(i8*) #1

declare dso_local i64 @AllocateAndChainBuffer(%struct.TYPE_4__*, i32*, i32, i32, i32) #1

declare dso_local i32 @NdisFreePacket(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
